--- a/007ResultingArchitecture.tex
+++ b/007ResultingArchitecture.tex
@@ -1,6 +1,6 @@
 \section{Combination into a Process-Driven Semi-Event-Based Micro-service DWS}
 \label{sec:finalArchitecture}
-After having introduced the basic technologies, this section aims to combine those into the process-driven semi-event-based microservice architecture for data warehouse systems. The focus will be generic and lie upon the interaction between multiple components. There will not be any detailed choice of various processes or products. In order to verify its usability and feasibility, an evaluation from industrial point of view will be appended. This will be achieved by interviewing a technical expert.
+After having introduced the basic technologies, this section aims to combine those into the process-driven semi-event-based microservice architecture for data warehouse systems. The focus will be generic and lies within the interaction between multiple components. There will not be any detailed choice of various processes or products. To verify its usability and feasibility, an evaluation from industrial point of view will be appended. This will be achieved by interviewing a technical expert.
 
 \subsection{Introducing the Process-Driven Semi-Event-Based Microservice Approach for Data Warehouse Systems}
 \begin{figure}[!htb]
@@ -12,9 +12,9 @@ After having introduced the basic technologies, this section aims to combine tho
 Figure \ref{fig:resultingArch} shows the resulting architecture. In the next paragraph we will have a more detailed summary of the components and their interactions.\newline
 \\
 Starting off with the data warehouse manager which contains a BPMN workflow engine used for the orchestration of the whole system. Additionally, all information of the process flow is stored and maintained within this component. \newline
-Next, let us focus upon the service cluster for data extraction. It contains microservices as SCS which are controlled via the data warehouse manager. As shown in the diagram, each service has its own database. Typically, in the extraction layer the staging area is used as temporary data storage.  It can be thought to have distinct services depending upon the input format. Nevertheless, there are multiple other possibilities about how to split up this component. As mentioned within chapter \ref{sec:techKnowHow} it is recommended to slice the services along the process which is defined within the BPMN diagram.\newline
+Next, let us focus at the service cluster for data extraction. It contains microservices as SCS which are controlled via the data warehouse manager. As shown in the diagram, each service has its own database. Typically, in the extraction layer the staging area is used as temporary data storage.  It can be thought of having distinct services depending on the input format. Nevertheless, there are multiple other possibilities about how to split up this component. As mentioned within chapter \ref{sec:techKnowHow} it is recommended to slice the services along the process which is defined within the BPMN diagram.\newline
 Besides of that, the transformation services are orchestrated by the workflow engine as well. They get cascaded as needed within the BPMN diagrams. As shown in the cluster, data cleaning, cleansing and enhancement is provided. These self-contained systems will hand over the data into a CDW component which stores the historical data.\newline
-In the cluster for analytical services, there are multiple instances which are used to extract and store a subset of data within data marts. Due to the orchestration done by BPM, it is possible to cascade multiple services in order to make department specific analysis possible. Furthermore, the information will be shared via a message broker or event bus system with various consumers which are often run by departments. As shown within the picture, it would be possible to use \acrshort{bi} self-services like Grafana or Tableau in order to generate reports from that information.\newline
+In the cluster for analytical services, there are multiple instances which are used to extract and store a subset of data within data marts. Due to the orchestration done by BPM, it is possible to cascade multiple services in order to make department specific analysis possible. Furthermore, the information will be shared via a message broker or event bus system with various consumers which are often run by departments. As shown within the picture, it would be possible to use \acrshort{bi} self-services like Grafana or Tableau to generate reports from that information.\newline
 \\
 In conclusion, the key features are contained within the SCS approach to DWS, the process-driven orchestration using a BPMN workflow engine as well as the data supply via an event bus / message broker. By making use of these principles the overall systems get more adaptive in terms of customer needs. The overall development and dependency management gets easier and faster. 
 
