--- a/008Conclusion.tex
+++ b/008Conclusion.tex
@@ -2,7 +2,7 @@
 \label{sec:conclusion}
 In the end of this paper the ''Process-Driven Semi-Event-Based Microservice Approach to Data Warehouse Systems'' has been derived and introduced. During the deduction of several concepts e.g. self-contained systems or business process management have been explained as well. \newline
 \\
-In order to conclude the output of this paper, lets head back to the hypothesis of this paper: ''Throughout the adaption of process-driven  microservice  principles  in  the  area  of  Data-Warehouse-Architectures,  a  huge improvement concerning individual characteristics is possible. Even with relatively less effort. This advance should lead to an optimised way of presenting various results to the user without increasing the system's complexity.'' (chapter \ref{sec:intro})
+In order to conclude the output of this paper, lets head back to the hypothesis of this paper: ''Throughout the adaption of process-driven  microservice  principles  in  the  area  of  Data-Warehouse-Architectures,  a  huge improvement concerning individual characteristics is possible. Even with relatively less effort. This advance leads to an optimised way of presenting various results to the user without increasing the system's complexity.'' (chapter \ref{sec:intro})
 As shown in the derivation as well as the expert interview, it can be stated that this approach to DWS delivers improvements regarding individual enhancements. Due to the process driven approach a transparent flow is given, which is easily adaptable. Making use of SCS, it is possible to have multiple teams focusing on specific components which will enable them to deliver faster. By having clusters of microservices along the data warehousing process, the components from Inmon's hub and spoke architecture can be mapped. Nevertheless, departments have the freedom of retrieving information for their needs by having them delivered via a bus system as stated in Kimball's approach.\newline
 Due to this, the advantages of both approaches are combined within a state of the art architecture. \newline
 \\
