--- a/main.tex
+++ b/main.tex
@@ -41,7 +41,7 @@
 \newacronym{esb}{ESB}{Enterprise Service Bus}
 \newacronym{etl}{ETL}{Extract Transform Load}
 \newacronym{ods}{ODS}{Operational-Data-Store}
-\newacronym{cdw}{CDW}{Cora Data Warehouse}
+\newacronym{cdw}{CDW}{Core Data Warehouse}
 \newacronym{olap}{OLAP}{Online Analytical Processing}
 \newacronym{rolap}{ROLAP}{Relational online analytical processing}
 \newacronym{sql}{SQL}{Structured Query Language}
