--- a/002Introduction.tex
+++ b/002Introduction.tex
@@ -13,6 +13,6 @@ Therefore, microservices and some techniques such as self contained systems are 
 Having elaborated those ideas, they will be adapted and combined into possible architectures. In this section there will be an in-depth discussion about the advantages and disadvantages of each technology.\newline
 Afterwards, there will be an outlook on the idea of Business Process Management. The underlying process driven architecture enables us to erase some previously shown disadvantages.\newline
 \\
-This will result in the hypothesis of this paper. Throughout the adaption of process-driven microservice principles in the area of Data Warehouse architectures, a huge improvement concerning individual characteristics is possible even with relatively little effort. This advance should lead to an optimised way of presenting various results to the user without increasing the system's complexity.\newline 
+This will result in the hypothesis of this paper. Throughout the adaption of process-driven microservice principles in the area of Data Warehouse architectures, a huge improvement concerning individual characteristics is possible even with relatively little effort. This advance will lead to an optimised way of presenting various results to the user without increasing the system's complexity.\newline 
 In the end, the resulting architecture will be (as described in the title) a process-driven semi-event-based microservice system, enabling us to run data-intensive applications. \newline
 As we make progress in this field of research, we will make use of several other publications and expert interviews to underpin this paper. 
