Refined the resulting architecture (pt1)

--- a/004StateOfTheArtDWS.tex
+++ b/004StateOfTheArtDWS.tex
@@ -27,6 +27,7 @@ A last aspect which needs to be pointed out is the design aspects of dependent a
 This section has shown the various design possibilities of data marts inside a corporate data warehouse System. By thinking about a modern adaption of DWS architectures, it is necessary to construct new data marts easily without losing the company-wide point of view and still enable departments to come up with their own requirements for analysis. 
 
 \subsection{Options Regarding the Persistent Data Handling}
+\label{sec:dataHandling}
 After having introduced various structural options above, let us face the topic of data persistence in current data warehouse Systems.
 All layers inside the DWS can be created with virtual data or with their own data persistence. For instance, it is possible to have a complete virtual DWS. \cite{sinz}\newline
 \\
