--- a/007ResultingArchitecture.tex
+++ b/007ResultingArchitecture.tex
@@ -9,14 +9,28 @@ After having introduced the basic technologies, this section aims to combine tho
     \caption{Process-driven semi-event-based microservice architecture for data warehouse systems}
     \label{fig:resultingArch}
 \end{figure}
-Figure \ref{fig:resultingArch} shows the resulting architecture. In the next paragraph we will have a more detailed summary of the components and their interactions.\newline
+Figure \ref{fig:resultingArch} shows the resulting architecture. In the next paragraph we will have a more detailed summary of the components and their interactions. As one might already see, the architecture is similar to Inmon's hub and spoke approach but provides several important adaptions as well. \newline
 \\
-Starting off with the data warehouse manager which contains a BPMN workflow engine used for the orchestration of the whole system. Additionally, all information of the process flow is stored and maintained within this component. \newline
-Next, let us focus at the service cluster for data extraction. It contains microservices as SCS which are controlled via the data warehouse manager. As shown in the diagram, each service has its own database. Typically, in the extraction layer the staging area is used as temporary data storage.  It can be thought of having distinct services depending on the input format. Nevertheless, there are multiple other possibilities about how to split up this component. As mentioned within chapter \ref{sec:techKnowHow} it is recommended to slice the services along the process which is defined within the BPMN diagram.\newline
-Besides of that, the transformation services are orchestrated by the workflow engine as well. They get cascaded as needed within the BPMN diagrams. As shown in the cluster, data cleaning, cleansing and enhancement is provided. These self-contained systems will hand over the data into a CDW component which stores the historical data.\newline
+Starting off with the data warehouse manager which contains a BPMN workflow engine used for the orchestration of the whole system.  Additionally, all information of the process flow is stored and maintained within this component.\newline
+While talking about this component it is also worth mentioning, that a goal could be to have a generalised data warehousing BPMN process in the future. This could furthermore be adapted by the needs of each user. Since most of the time the process is quite deterministic and straight-forward this could lead to some advantages in this area. Even tho since individual changes are easily designed within this notation. \newline
+\\
+Next, let us focus at the service cluster for data extraction. It contains microservices as SCS which are controlled via the data warehouse manager. As shown in the diagram, each service has its own database. Typically, in the extraction layer the staging area is used as temporary data storage.  It can be thought of having distinct services depending on the input format. Nevertheless, there are multiple other possibilities about how to split up this component. As mentioned within chapter \ref{sec:techKnowHow} it is recommended to slice the services along the process which is defined within the BPMN diagram. Since this part of the process can be implemented quite generic there might not be any department specific services at all.\newline
+\\
+Besides of that, the transformation services are orchestrated by the workflow engine as well. They get cascaded as needed within the BPMN diagrams. As shown in the cluster, data cleaning, cleansing and enhancement is provided. This cluster might already contain some department specific services, especially when thinking about various possibilities for the data enrichment.\newline
+These self-contained systems will hand over the data into a CDW component which stores the historical data.\newline
+\\
 In the cluster for analytical services, there are multiple instances which are used to extract and store a subset of data within data marts. Due to the orchestration done by BPM, it is possible to cascade multiple services in order to make department specific analysis possible. Furthermore, the information will be shared via a message broker or event bus system with various consumers which are often run by departments. As shown within the picture, it would be possible to use \acrshort{bi} self-services like Grafana or Tableau to generate reports from that information.\newline
+Due to the usage of individual analytical services generating reports one could say that the overall overview gets lost and functional silos are created. This is where the message broker takes effect. Since all metrics are shared over this bus it is possible to aggregate those back to an overall report again. By having this transparency within a management information system it is easy to keep track over several business areas. \newline
 \\
-In conclusion, the key features are contained within the SCS approach to DWS, the process-driven orchestration using a BPMN workflow engine as well as the data supply via an event bus / message broker. By making use of these principles the overall systems get more adaptive in terms of customer needs. The overall development and dependency management gets easier and faster. 
+\\
+After having introduced the distinct clusters let us focus at the technological changes within those. Especially looking on important aspects like scalability as well as data persistence.\newline
+The SCS approach allows us not only to have loosely coupled services but also to gain advantages through scalability. For each process instance which is created a new instance of this service can be created. Depending on the implementation within the DW-Manager such instance can be created each time the monitoring component of a data source triggers the process. Furthermore in terms of failure-safety and routing it makes sense to make use of a container-orchestration infrastructure system like Kubernetes. This would make deployment and management of such a system a lot easier.\newline 
+Talking about the SCS approach it is worth mentioning that distinct teams are able to work upon services without running into conflicting dependencies. Due to their freedoms the development teams even are faster and more flexible within their technological choices.\newline
+The technological freedom leads to the next topic of data persistence. As shown in section \ref{sec:dataHandling} multidimensional or relational OLAP is often used. While having Self-Contained-Systems the user or developer has a free choice to choose a technology of his choice without affecting the whole system. Especially nowadays NoSQL databases gain in importance. Some good examples for analytical queryable data structures are graph- as well as object databases. 
+\\
+\\
+In conclusion, the key features are contained within the SCS approach to DWS, the process-driven orchestration using a BPMN workflow engine as well as the data supply via an event bus / message broker. By making use of these principles the overall systems get more adaptive in terms of customer needs. The overall development and dependency management gets easier and faster. \newline
+But this approach will also provide some challenges as well. Data consistency, unnecessary effort, double work...
 
 \subsection{Evaluation of this Architecture from an industrial Point of View}
 To verify the feasibility, the purpose and the improvements of this approach in contrast to the presented ones in chapter \ref{sec:referenceArchitecture} and \ref{sec:otherArchitectures} an interview is conducted. Before introducing the outcome guidelines and candidates need to be defined and chosen.
@@ -37,8 +51,11 @@ In terms of software architecture, Dr. Dirk Nitsche is going to evaluate the res
 Dr. Hanno Walischewski is taking over from the systems point of view. He achieved his PhD in 1999 at the University of Freiburg concerning the learning and understanding of structured documents. Afterwards, he made his way into systems architecture and is currently Chief Architect for Intelligent Traffic Systems at Siemens Mobility. He has great know-how in terms of microservices and their collaboration. Due to this, he will analyse the orchestration of those services and their weaknesses.
 
 \subsubsection{Resulting Feedback}
-\cite{dirk}\newline
-\\
+Hanno Walischewski provided a quote in which he focuses mainly on the transition to microservices:\newline
 ''This approach goes nicely the same way as may other architecture refactorings nowadays: splitting monoliths into a set of microservices. The classical way a data warehouse system was one big block that did all the work like a black box. Decoupling this into smaller pieces follows the learnings over the last years. Scalability can be realized in a much more detailed way depending on the use cases that shall be covered.\newline
 The microservice design results in simpler components, but lifts more complexity into the network and communication layer. Using a BPMN engine to orchestrate the involved components helps avoiding the implementation of complex pattern like saga (https://microservices.io/patterns/data/saga.html).\newline
-For future work it is definitely worth implementing a proof of concept to show the strength of  this approach. Due to the success of a lot of other migrations from monolithic to distributed architectures, it can be expected to be more flexible and performant.'' \cite{hanno}
+For future work it is definitely worth implementing a proof of concept to show the strength of  this approach. Due to the success of a lot of other migrations from monolithic to distributed architectures, it can be expected to be more flexible and performant.'' \cite{hanno}\newline
+\\
+After having conducted an interview with Dirk Nitsche in person the outcome will be summarised below:\newline
+He stated that especially since the data warehousing process is deterministic by nature the usage of BPMN and a process engine for orchestration is beneficial on paper. To testify the practical purpose of this architecture a prototype would be needed. Especially when considering inconsistent data states in various SCS. 
+\cite{dirk}\newline
